changement sur les relation finances

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     driver-class-name:  com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/project_plan
     username: root
-    password: ENC(iLqX7kaSFyVygd9sNHHMww==)
+    password: 1949
 
 # JPA Configuration
   jpa:
@@ -14,11 +14,8 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
     defer-datasource-initialization: true
+      dialect = org.hibernate.dialect.MySQL5Dialect
 
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-        format_sql : true
 
 server:
   port: 8000
