--- a/pom.xml
+++ b/pom.xml
@@ -4,24 +4,20 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.4</version>
+		<version>3.2.2</version>
 		<relativePath />
 	</parent>
 	<groupId>io.kadev</groupId>
 	<artifactId>ProjectPlan</artifactId>
 	<version>0.0.1.SNAPSHOT</version>
 	<name>ProjectPlan</name>
-	<description>Digitalisation des demandes DSI </description>
+	<description>Calcul des métriques pour des idées de projets des utilisateurs</description>
 	<properties>
 		<java.version>21</java.version>
 		<mapstruct.version>1.6.0.Beta1</mapstruct.version>
+		<cucumber.version>7.14.0</cucumber.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>com.github.ulisesbocchio</groupId>
-			<artifactId>jasypt-spring-boot-starter</artifactId>
-			<version>3.0.3</version>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
@@ -90,19 +86,19 @@
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-java</artifactId>
-			<version>7.14.0</version>
+			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-junit</artifactId>
-			<version>7.14.0</version>
+			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-spring</artifactId>
-			<version>7.14.0</version>
+			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -124,14 +120,6 @@
 					</excludes>
 				</configuration>
 			</plugin>
-
-			<plugin>
-				<groupId>com.github.ulisesbocchio</groupId>
-				<artifactId>jasypt-maven-plugin</artifactId>
-				<version>3.0.3</version>
-			</plugin>
-
-
 		</plugins>
 	</build>
 
