--- a/angular-app/client/package.json
+++ b/angular-app/client/package.json
@@ -20,7 +20,12 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "apollo-angular": "^6.0.0",
+    "apollo-angular-link-http": "^1.11.0",
+    "apollo-cache-inmemory": "^1.6.6",
     "bootstrap": "^5.2.3",
+    "graphql": "^15.8.0",
+    "graphql-tag": "^2.12.6",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
