--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@
 spring:
   datasource:
     driver-class-name:  com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/project_plan_test
+    url: jdbc:mysql://localhost:3306/project_plan
     username: root
-    password: admin
+    password: 1949
 
 #  spring:
 #    h2.console.enabled: true
